[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/objects/PirateFlag.png" type="Texture" id=1]
[ext_resource path="res://src/helpers/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/data/objects/Flag.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/notification.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fly"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 47 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 320, 180 )

[node name="Flag" type="Sprite"]
texture = ExtResource( 1 )
hframes = 10
frame = 9
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 1 )
anims/Fly = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( -15, 0 )
shape = SubResource( 4 )

[node name="SavePosition" type="Position2D" parent="."]
position = Vector2( -15, 33 )

[node name="PlayerDetectionZone2" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone2" index="0"]
shape = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="player_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_player_entered"]
[connection signal="player_exited" from="PlayerDetectionZone2" to="." method="_on_PlayerDetectionZone2_player_exited"]

[editable path="PlayerDetectionZone"]
[editable path="PlayerDetectionZone2"]
